tdf#106866 query character size instead of bytes

Change-Id: I7639fb1accdf728a8170ddb7dc9caf84bad8d3ef